syntax = "proto3";

package control;
option go_package = "./control";

message Ping {
  repeated int64 id = 1;
}
message Pong {
  repeated int64 id = 1;
}

// 生成token
message GetAuthTokenReq {
  int64 admin_id = 1;
}
message GetAuthTokenResp {
  string token = 1;
  int64 expire_time = 2 [json_name = "expire_time"];
}

// 解析token
message ParseAuthTokenReq {
  string token = 1;
}
message ParseAuthTokenResp {
  int64 admin_id = 1 [json_name = "admin_id"];
  int64 expire_time = 2 [json_name = "expire_time"];
  string user_name = 3 [json_name = "user_name"];
  string real_name = 4 [json_name = "real_name"];
}

// 获取账号功能权限信息（页面功能）
message GetAdminFuncControlReq {
  int32 admin_id = 1;                 // 用户ID（必传）
  int32 sys_type = 2;                 // 系统类型（必传）
  repeated string acl_list = 3;       // 权限acl标识集合
  repeated string url_list = 4;       // 权限url集合
  repeated string menu_acl_list = 5;  // 菜单acl集合
  repeated string menu_url_list = 6;  // 菜单url集合
}

message GetAdminFuncControlResp {
  repeated GetAdminFuncControlItem list = 1 [json_name = "list"];
}

message GetAdminFuncControlItem {
  int32 id = 1 [json_name = "id"];
  string acl = 2 [json_name = "acl"];
  string url = 3 [json_name = "url"];
  string name = 4 [json_name = "name"];
  int32 menu_id = 5 [json_name = "menu_id"];
  string menu_acl = 6 [json_name = "menu_acl"];
  string menu_name = 7 [json_name = "menu_name"];
}

// 获取项目权限列表
message GetProjectFuncControlReq {
  int32 admin_id = 1;              // 用户ID（必传）
  repeated int32 project_ids = 2;  //项目id列表
}

message GetProjectFuncControlResp {
  repeated GetProjectFuncControlItem list = 1 [json_name = "list"];
}

message GetProjectFuncControlItem {
  int32 id = 1 [json_name = "id"];       //项目id
  string name = 2 [json_name = "name"];  //项目名称
}

//获取员工管辖权限
message GetJurisdictionAdminFuncControlReq {
  int32 admin_id = 1;  // 用户ID（必传）
}

message GetJurisdictionAdminFuncControlResp {
  repeated GetJurisdictionAdminFuncControlItem list = 1 [json_name = "list"];
  int32 jurisdiction = 2 [json_name = "jurisdiction"];  //  管辖范围，管辖:0:自己和下属 1:全部员工 2:自己
}

message GetJurisdictionAdminFuncControlItem {
  int32 id = 1 [json_name = "id"];
  string avatar = 2 [json_name = "avator"];
  string real_name = 3 [json_name = "real_name"];
  string nick_name = 4 [json_name = "nick_name"];
  string phone = 5 [json_name = "phone"];
  string email = 6 [json_name = "email"];
}

//获取用户菜单权限
message GetMenuAdminFuncControlReq {
  int32 admin_id = 1;  // 用户ID（必传）
  int32 sys_type = 2;  // 系统类型
}

message GetMenuAdminFuncControlResp {
  repeated GetMenuAdminFuncControlItem list = 1 [json_name = "list"];  // 用户ID（必传）
}

message GetMenuAdminFuncControlItem {
  int32 id = 1 [json_name = "id"];       //菜单id
  string acl = 2 [json_name = "acl"];    //菜单标识
  string url = 3 [json_name = "url"];    //菜单url
  string name = 4 [json_name = "name"];  //菜单名称
  int32 level = 5 [json_name = "level"];
  int32 p_id = 6 [json_name = "p_id"];
  int32 sort = 7 [json_name = "sort"];
  int32 status = 8 [json_name = "status"];
  int32 sys_type = 9 [json_name = "sys_type"];
  int32 display = 10 [json_name = "display"];
  string desc = 11 [json_name = "desc"];
  int32  target = 12 [json_name = "target"];
  string  icon = 13 [json_name = "icon"];
}

// 获取账号数据权限信息
message GetAdminDataControlReq {
  int32 admin_id = 1;            // 用户ID（必传）
  repeated string acl_list = 2;  // 数据标识集合
}

message GetAdminDataControlResp {
  repeated string list = 1;  // 数据标识集合
}

//通过手机号码获取账号信息
message GetAdminInfoByPhoneControlReq {
  string phone = 1;  //手机号码
}

message GetAdminInfoByPhoneControlResp {
  repeated GetAdminInfoByPhoneItem list = 1 [json_name = "list"];
}

message GetAdminInfoByPhoneItem {
  int32 id = 1 [json_name = "id"];
  string avatar = 2 [json_name = "avatar"];
  string real_name = 3 [json_name = "real_name"];
  string nick_name = 4 [json_name = "nick_name"];
  string phone = 5 [json_name = "phone"];
  int32 status = 6 [json_name = "status"];
  int32 create_time = 7[json_name = "create_time"];
  int32 update_time = 8[json_name = "update_time"];
  int32 create_user = 9[json_name = "create_user_id"];
  int32 update_user = 10[json_name = "update_user_id"];
}

//获取部门下的账号列表
message GetAdminIdsByDepartmentControlReq {
  string department_ids = 1;  //部门id
}

message GetAdminIdsByDepartmentControlResp {
  repeated int32 admin_ids = 1 [json_name = "admin_ids"];
}

// 校验功能权限
message VerifyFuncControlReq {
  int32 admin_id = 1;                           // 用户ID（必传）
  int32 sys_type = 2 [json_name = "sys_type"];  // 系统类型（必传）
  string url = 3;                               // 请求接口url路由（必传）
  string method = 4;                            // 请求方式（必传）
}
message VerifyFuncControlResp {
  bool result = 1;  // 校验结果：true-通过，false-不通过
}

//获取角色员工管辖权限
message GetRoleJurisdictionAdminControlReq {
  int32 role_id = 1;  // 角色ID（必传）
}
message GetRoleJurisdictionAdminControlResp {
  repeated GetRoleJurisdictionAdminControlItem list = 1 [json_name = "list"];
  int32 jurisdiction = 2 [json_name = "jurisdiction"];  //  管辖范围，管辖:0:自己和下属 1:全部员工 2:自己
}
message GetRoleJurisdictionAdminControlItem {
  int32 id = 1 [json_name = "id"];
  string avatar = 2 [json_name = "avator"];
  string real_name = 3 [json_name = "real_name"];
  string nick_name = 4 [json_name = "nick_name"];
  string phone = 5 [json_name = "phone"];
  string email = 6 [json_name = "email"];
}
//获取角色项目权限
message GetRoleProjectControlReq {
  int32 role_id = 1;  // 角色ID（必传）
}
message GetRoleProjectControlResp {
  repeated GetRoleProjectControlItem list = 1 [json_name = "list"];
}
message GetRoleProjectControlItem {
  int32 id = 1 [json_name = "id"];       //项目id
  string name = 2 [json_name = "name"];  //项目名称
}
//获取角色可见字段权限
message GetRoleDataControlReq {
  int32 role_id = 1;  // 角色ID（必传）
}
message GetRoleDataControlResp {
  repeated string list = 1 [json_name = "list"];
}

//获取部门员工管辖权限
message GetDeptJurisdictionAdminControlReq {
  int32 dept_id = 1;  // 部门ID（必传）
}
message GetDeptJurisdictionAdminControlResp {
  repeated GetDeptJurisdictionAdminControlItem list = 1 [json_name = "list"];
  int32 jurisdiction = 2 [json_name = "jurisdiction"];  //  管辖范围，管辖:0:自己和下属 1:全部员工 2:自己
}
message GetDeptJurisdictionAdminControlItem {
  int32 id = 1 [json_name = "id"];
  string avatar = 2 [json_name = "avator"];
  string real_name = 3 [json_name = "real_name"];
  string nick_name = 4 [json_name = "nick_name"];
  string phone = 5 [json_name = "phone"];
  string email = 6 [json_name = "email"];
}
//获取部门可见字段权限
message GetDeptDataControlReq {
  int32 dept_id = 1;  // 部门ID（必传）
}
message GetDeptDataControlResp {
  repeated string list = 1 [json_name = "list"];
}
//获取部门管辖项目权限
message GetDeptProjectControlReq {
  int32 dept_id = 1;  // 部门ID（必传）
}
message GetDeptProjectControlResp {
  repeated GetDeptProjectControlItem list = 1 [json_name = "list"];
}
message GetDeptProjectControlItem {
  int32 id = 1 [json_name = "id"];       //项目id
  string name = 2 [json_name = "name"];  //项目名称
}

// 获取账号详情
message GetAdminDetailReq {
  int32 admin_id = 1;  // 账号ID（必传）
}
message GetAdminDetailRoleListItem {
  int32 id = 1 [json_name = "id"];  // 角色ID
  string name = 2 [json_name = "name"];  // 角色名称
}
message GetAdminDetailResp {
  int32 id = 1 [json_name = "id"];  // 账号ID
  string real_name = 2 [json_name = "real_name"];  // 真实姓名
  string nick_name = 3 [json_name = "nick_name"];  // 昵称
  int32 user_id = 4 [json_name = "user_id"];  // 用户id
  int32 job_type = 5 [json_name = "job_type"];  // 工作岗位类型：1-全职，2-兼职
  int32 status = 6 [json_name = "status"];  // 状态： 0-禁用，1-正常，2-待激活，3-已离职
  int32 consultant_status = 7 [json_name = "consultant_status"];  // 顾问状态 0-禁用 1-启用
  int32 is_active = 8 [json_name = "is_active"];  // 是否有效 在职过的都算有效 0-无效 1-有效
  string position = 9 [json_name = "position"];  // 职位信息
  repeated GetAdminDetailRoleListItem role_list = 10 [json_name = "role_list"];  // 账号角色信息列表
}

// 获取账号角色信息列表
message GetAdminRoleListReq {
  repeated int32 admin_ids = 1;  // 账号ID集合（必传）
}
message GetAdminRoleListItem {
  int32 id = 1 [json_name = "id"];  // 账号ID
  repeated GetAdminRoleListRoleListItem role_list = 2 [json_name = "role_list"];  // 账号角色信息列表
}
message GetAdminRoleListRoleListItem {
  int32 id = 1 [json_name = "id"];  // 角色ID
  string name = 2 [json_name = "name"];  // 角色名称
}
message GetAdminRoleListResp {
  repeated GetAdminRoleListItem list = 1 [json_name = "list"];
}

// 检查是否公司员工
message CheckStaffReq {
  int32 user_id = 1 [json_name = "user_id"];  // 用户uid
}
message CheckStaffResp {
  int32 is_staff = 1 [json_name = "is_staff"];  // 是否公司员工：0-否；1-是
}

service Control {
  // test
  rpc test(Ping) returns (Pong);

  // 生成token
  rpc getAuthToken(GetAuthTokenReq) returns (GetAuthTokenResp);

  // 解析token
  rpc parseAuthToken(ParseAuthTokenReq) returns (ParseAuthTokenResp);

  // 获取账号功能权限信息（页面功能）
  rpc getAdminFuncControl(GetAdminFuncControlReq) returns (GetAdminFuncControlResp);

  //获取项目权限信息
  rpc getProjectFuncControl(GetProjectFuncControlReq) returns (GetProjectFuncControlResp);

  //获取管辖员工权限
  rpc getJurisdictionAdminFunControl(GetJurisdictionAdminFuncControlReq) returns (GetJurisdictionAdminFuncControlResp);

  // 获取账号数据权限信息
  rpc getAdminDataControl(GetAdminDataControlReq) returns (GetAdminDataControlResp);

  // 获取账号菜单权限
  rpc getMenuAdminFuncControl(GetMenuAdminFuncControlReq) returns (GetMenuAdminFuncControlResp);

  //通过手机号码获取账号信息
  rpc getAdminInfoByPhoneControl(GetAdminInfoByPhoneControlReq) returns (GetAdminInfoByPhoneControlResp);

  //获取部门下的账号列表
  rpc getAdminIdsByDepartmentControl(GetAdminIdsByDepartmentControlReq) returns (GetAdminIdsByDepartmentControlResp);

  // 校验功能权限
  rpc verifyFuncControl(VerifyFuncControlReq) returns (VerifyFuncControlResp);

  //获取角色管辖权限
  rpc getRoleJurisdictionAdminControl(GetRoleJurisdictionAdminControlReq) returns (GetRoleJurisdictionAdminControlResp);

  //获取角色项目权限
  rpc getRoleProjectControl(GetRoleProjectControlReq) returns (GetRoleProjectControlResp);

  //获取角色可见字段权限
  rpc getRoleDataControl(GetRoleDataControlReq) returns (GetRoleDataControlResp);

  //获取部门管辖员工权限
  rpc getDeptJurisdictionAdminControl(GetDeptJurisdictionAdminControlReq) returns (GetDeptJurisdictionAdminControlResp);

  //获取部门可见字段权限
  rpc getDeptDataControl(GetDeptDataControlReq) returns (GetDeptDataControlResp);

  //获取部门管辖项目权限
  rpc getDeptProjectControl(GetDeptProjectControlReq) returns (GetDeptProjectControlResp);

  // 获取账号详情
  rpc getAdminDetail(GetAdminDetailReq) returns (GetAdminDetailResp);

  // 获取账号角色信息列表
  rpc getAdminRoleList(GetAdminRoleListReq) returns (GetAdminRoleListResp);

  // 检查是否公司员工
  rpc checkIsStaff(CheckStaffReq) returns (CheckStaffResp);
}